
- [NO][Major] subscripts injection;
- [NO][Major] support Direct Line
- [NO][Major] support for several parallel conversations
- [NO][Major] ability to mock recognizers;
- support for internationalization

- [NO][Maintainability] extract log reporters to a separate library
- [NO][Maintainability] reorganize tests about Messages (like BotMessages)
- [NO][Maintainability] provide a pipeline for deployment
 -- run tests
 -- validate that samples still valid
 -- inject TOC
 -- message that code ready to be published

- [NO][Discoverability] provide an example that shows Autoload functionality
- [NO][Discoverability] integrate: badge.fury.io https://travis-ci.org/
- [NO][Discoverability] example for testing recognizer;
- [NO][Discoverability] example with subscript

- [NO][Maintainability] Disable ConsoleConnector default output

- [NO] OneOfNextMessages(message, count ) validation step;
- [NO] TillResponseMessage(message) validation step;
- [NO] IgnoreTillMessage (messageText, maxCount = 0)
- [NO] prepare automated tests for log reporters;



--------------------------------
v 0.6.4
- [OK] Fix for suggested actions error description: display value
- [OK] Fix for error message, normalize output
- Fix for expected message feautre: display suggested actions

--------------------------------
v 0.6.3

- Fix for attachment validation by callback.
- Better error messages.
- Smoke tests for log reporters;


--------------------------------
v 0.6.2

- Removed attachment-related information from Prompt messages
- Custom headers for info messages



--------------------------------
v 0.6.1

- [OK] validation of rich cards and attachments;
- [OK][Major] validation of rich cards;
- [OK][Major] validation of attachments;

--------------------------------
v 0.6.0

- [OK] custom verification step



--------------------------------
v 0.5.4
- [OK] coverage deployment step
- build & inject TOC

--------------------------------
v 0.5.3
- [NO] support for conversation started by bot