@@ -3,7 +3,7 @@
     "node": "7.8.0"
   },
   "name": "botbuilder-unit",
-  "version": "0.6.4",
+  "version": "0.6.5",
   "description": "Unit tests for chatbot dialogs",
   "main": "botbuilder-unit.js",
   "dependencies": {
